# memory-layout-rs

./: Cargo.toml  README.md
.github/workflows/: CI.yml
crates/memory-layout/: Cargo.toml
crates/memory-layout-codegen/: Cargo.toml  README.md
crates/memory-layout-codegen/src/: lib.rs
crates/memory-layout/src/: lib.rs
crates/memory_layout/: Cargo.toml
crates/memory_layout/src/: lib.rs  main.rs
crates/memory_layout_derive/: Cargo.toml
crates/memory_layout_derive/src/: lib.rs
crates/memory_layout_proc/: Cargo.toml
crates/memory_layout_proc/src/: lib.rs
