[package]
name = "memory-layout-codegen"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "support crate for memory-layout"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["parsing"] }
proc-macro2 = "1"
proc-macro-crate = { version = "1" }
